[MCOMPILER-269] Support modulepath (Java9/Jigsaw) Improve detection when modulePath should be used.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-compiler-plugin@1762228 13f79535-47bb-0310-9956-ffa450edef68